<resources>
    <string name="app_name">SilverLayout</string>
    <string name="aware_photo">aware</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="remember">Remember me</string>
    <string name="forget">Forget password?</string>
    <string name="login">Login</string>
    <string name="connect_us">or connect with</string>
    <string name="facebook">facebook</string>
    <string name="signup">Sign Up with E-mail</string>
</resources>