<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/sign_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="120"
        android:contentDescription="@string/aware_photo"
        android:src="@mipmap/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/username"
        android:background="@drawable/text_border"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/password"
        android:background="@drawable/text_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="51dp"
        android:buttonTint="@color/gray"
        android:checked="false"
        app:layout_constraintEnd_toStartOf="@+id/sign_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/attention"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="284dp"
            android:text="@string/remember"
            android:textColor="@color/remember"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            android:paddingStart="44dp"
            android:text="@string/forget"
            android:textColor="@color/remember"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="48dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/login_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:text="@string/connect_us"
        android:textColor="@color/connect"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/attention"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="170dp"
        android:background="@drawable/button_shape"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook_graph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/twitter_shape"
        android:contentDescription="@string/facebook"
        android:src="@drawable/twitter_graph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/sign_up_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/sign_up"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/signup_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />


</androidx.constraintlayout.widget.ConstraintLayout>